[gd_scene load_steps=34 format=3 uid="uid://sqcuvh4lmyas"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_00ya3"]
[ext_resource type="Texture2D" uid="uid://b62w7bkcfywx8" path="res://assets/bg/bg0.png" id="2_f4rn2"]
[ext_resource type="PackedScene" uid="uid://c7xhqeiovp07s" path="res://scenes/player/player.tscn" id="4_glhq7"]
[ext_resource type="Texture2D" uid="uid://ce6aj2gaissed" path="res://assets/ui/panel.png" id="5_sngx8"]
[ext_resource type="FontFile" uid="uid://bik5l33o2vs3s" path="res://fonts/monogram-extended.ttf" id="6_1mm6w"]
[ext_resource type="Texture2D" uid="uid://q2fo0pxgrjhj" path="res://assets/ui/heart.png" id="6_bw7w5"]
[ext_resource type="Texture2D" uid="uid://cyu30qqat5ovo" path="res://assets/ui/pause.png" id="8_7yiuj"]
[ext_resource type="Texture2D" uid="uid://cnr2imcvswmhl" path="res://assets/ui/pause_pressed.png" id="9_bajnv"]
[ext_resource type="Texture2D" uid="uid://dt7give63llmw" path="res://assets/ui/pause_hover.png" id="10_3xtau"]
[ext_resource type="Texture2D" uid="uid://c4tcpr3kquy0n" path="res://assets/ui/full.png" id="10_67qse"]
[ext_resource type="Texture2D" uid="uid://cbx7aro8akh6a" path="res://assets/ui/sumbit.png" id="10_fcdle"]
[ext_resource type="Texture2D" uid="uid://cpxpvvh3u2nvf" path="res://assets/ui/sumbit_pressed.png" id="11_lvx05"]
[ext_resource type="Texture2D" uid="uid://dte6v84nrgaa1" path="res://assets/ui/full_hover.png" id="12_7gi1o"]
[ext_resource type="Texture2D" uid="uid://uupail34wchg" path="res://assets/ui/sumbit_hover.png" id="12_e44lg"]
[ext_resource type="Texture2D" uid="uid://b3xdq67dh84ac" path="res://assets/ui/sumbit_disabled.png" id="13_mpb4r"]
[ext_resource type="Texture2D" uid="uid://ceivvcydeq8t" path="res://assets/ui/restart.png" id="13_p00ej"]
[ext_resource type="Texture2D" uid="uid://c67d35ctwf5bh" path="res://assets/ui/restart_pressed.png" id="14_66hei"]
[ext_resource type="Texture2D" uid="uid://bmuc54ha5fqkg" path="res://assets/ui/restart_hover.png" id="15_vmtpj"]

[sub_resource type="GDScript" id="GDScript_dvwpi"]
resource_name = "bg"
script/source = "extends TextureRect

var speed = 50


func _process(delta):
	position.y += speed * delta
	if (position.y >= -16):
		position.y -= 256
"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d4j6l"]
texture = ExtResource("5_sngx8")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0
expand_margin_left = 2.0
expand_margin_top = 1.0
expand_margin_right = 2.0
expand_margin_bottom = 1.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="GDScript" id="GDScript_8fnik"]
resource_name = "hpbar"
script/source = "extends TextureRect


func _on_player_hp_changed(hp):
	size.x = hp * 10
	if hp == 0: hide()
"

[sub_resource type="LabelSettings" id="LabelSettings_hyjtx"]
line_spacing = 0.0
font = ExtResource("6_1mm6w")
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="InputEventAction" id="InputEventAction_o0j8p"]
action = &"pause"

[sub_resource type="Shortcut" id="Shortcut_julpb"]
events = [SubResource("InputEventAction_o0j8p")]

[sub_resource type="GDScript" id="GDScript_78y3s"]
resource_name = "pause"
script/source = "extends Node


func _on_toggled(button_pressed):
	get_tree().paused = button_pressed
"

[sub_resource type="InputEventAction" id="InputEventAction_c8wog"]
action = &"fullscreen"

[sub_resource type="Shortcut" id="Shortcut_gx1gh"]
events = [SubResource("InputEventAction_c8wog")]

[sub_resource type="GDScript" id="GDScript_vc3xr"]
resource_name = "fullscreen"
script/source = "extends Node


func _on_toggled(button_pressed):
	if button_pressed:
		DisplayServer.window_set_mode(DisplayServer.WINDOW_MODE_EXCLUSIVE_FULLSCREEN)
	else:
		DisplayServer.window_set_mode(DisplayServer.WINDOW_MODE_WINDOWED)	
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lhji2"]
bg_color = Color(0.145098, 0.0156863, 0.247059, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v32vo"]
bg_color = Color(0.572549, 0.254902, 0.952941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_etxax"]
bg_color = Color(0.6, 0.6, 0.6, 0.25098)

[sub_resource type="GDScript" id="GDScript_2kjc2"]
resource_name = "Submit"
script/source = "extends TextureButton

func _on_pressed():
	$\"../HTTPRequest\".request(\"http://infdash.temp.swtest.ru/submit.php?nick=\"+$\"../Nick\".text+\"&score=\"+$\"../Score\".text)
	disabled = true
"

[sub_resource type="GDScript" id="GDScript_20t64"]
resource_name = "Restart"
script/source = "extends TextureButton

func _on_pressed():
	get_tree().reload_current_scene()
"

[node name="Game" type="Node2D"]
process_mode = 1
scale = Vector2(4, 4)
script = ExtResource("1_00ya3")

[node name="Level" type="Node2D" parent="."]
show_behind_parent = true

[node name="BackGround" type="TextureRect" parent="Level"]
offset_top = -272.0
offset_right = 160.0
offset_bottom = 240.0
texture = ExtResource("2_f4rn2")
stretch_mode = 1
script = SubResource("GDScript_dvwpi")

[node name="Player" parent="Level" instance=ExtResource("4_glhq7")]
position = Vector2(80, 160)

[node name="Control" type="Control" parent="."]
process_mode = 3
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 160.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 122.0
offset_bottom = 16.0
theme_override_styles/panel = SubResource("StyleBoxTexture_d4j6l")

[node name="HpBar" type="TextureRect" parent="Control/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 32.0
offset_bottom = 11.0
texture = ExtResource("6_bw7w5")
stretch_mode = 1
script = SubResource("GDScript_8fnik")

[node name="Score" type="Label" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -56.0
offset_top = -0.5
offset_right = -1.0
offset_bottom = 15.5
grow_horizontal = 0
text = "0"
label_settings = SubResource("LabelSettings_hyjtx")
horizontal_alignment = 2

[node name="PauseButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = 15.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 0
toggle_mode = true
action_mode = 0
shortcut = SubResource("Shortcut_julpb")
shortcut_feedback = false
shortcut_in_tooltip = false
texture_normal = ExtResource("8_7yiuj")
texture_pressed = ExtResource("9_bajnv")
texture_hover = ExtResource("10_3xtau")
stretch_mode = 0
script = SubResource("GDScript_78y3s")

[node name="FSButton" type="TextureButton" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_top = 2.0
offset_right = -20.0
offset_bottom = 15.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 0
toggle_mode = true
action_mode = 0
shortcut = SubResource("Shortcut_gx1gh")
shortcut_feedback = false
shortcut_in_tooltip = false
texture_normal = ExtResource("10_67qse")
texture_pressed = ExtResource("10_67qse")
texture_hover = ExtResource("12_7gi1o")
stretch_mode = 0
script = SubResource("GDScript_vc3xr")

[node name="ProgressBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_top = 222.0
offset_right = 160.0
offset_bottom = 224.0
theme_override_styles/background = SubResource("StyleBoxFlat_lhji2")
theme_override_styles/fill = SubResource("StyleBoxFlat_v32vo")
max_value = 30.0
step = 1.0
allow_greater = true
show_percentage = false

[node name="Overlay" type="Panel" parent="Control"]
visible = false
layout_mode = 0
offset_right = 160.0
offset_bottom = 224.0

[node name="Panel" type="Panel" parent="Control/Overlay"]
layout_mode = 0
offset_left = 14.0
offset_top = 82.0
offset_right = 146.0
offset_bottom = 118.0
theme_override_styles/panel = SubResource("StyleBoxTexture_d4j6l")

[node name="GameOver" type="Label" parent="Control/Overlay/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_right = 32.0
offset_bottom = 18.0
grow_horizontal = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_hyjtx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Control/Overlay/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 12.0
offset_top = 18.0
offset_right = 62.0
offset_bottom = 34.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_hyjtx")
horizontal_alignment = 2

[node name="Nick" type="LineEdit" parent="Control/Overlay/Panel"]
layout_mode = 0
offset_left = 34.0
offset_top = 14.0
offset_right = 74.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("6_1mm6w")
theme_override_styles/focus = SubResource("StyleBoxFlat_etxax")
placeholder_text = "_____"
max_length = 5
flat = true
caret_blink = true
caret_blink_interval = 0.45

[node name="NickLable" type="Label" parent="Control/Overlay/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.0
offset_top = 18.0
offset_right = -32.0
offset_bottom = 34.0
grow_horizontal = 2
text = "Name:"
label_settings = SubResource("LabelSettings_hyjtx")

[node name="HTTPRequest" type="HTTPRequest" parent="Control/Overlay/Panel"]
use_threads = true
timeout = 10.0

[node name="Submit" type="TextureButton" parent="Control/Overlay"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = -100.0
offset_right = 69.0
offset_bottom = -86.0
grow_vertical = 0
shortcut_feedback = false
shortcut_in_tooltip = false
texture_normal = ExtResource("10_fcdle")
texture_pressed = ExtResource("11_lvx05")
texture_hover = ExtResource("12_e44lg")
texture_disabled = ExtResource("13_mpb4r")
script = SubResource("GDScript_2kjc2")

[node name="Restart" type="TextureButton" parent="Control/Overlay"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -100.0
offset_right = -25.0
offset_bottom = -86.0
grow_horizontal = 0
grow_vertical = 0
shortcut_feedback = false
shortcut_in_tooltip = false
texture_normal = ExtResource("13_p00ej")
texture_pressed = ExtResource("14_66hei")
texture_hover = ExtResource("15_vmtpj")
script = SubResource("GDScript_20t64")

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="hp_changed" from="Level/Player" to="Control/Panel/HpBar" method="_on_player_hp_changed"]
[connection signal="toggled" from="Control/PauseButton" to="Control/PauseButton" method="_on_toggled"]
[connection signal="toggled" from="Control/FSButton" to="Control/FSButton" method="_on_toggled"]
[connection signal="pressed" from="Control/Overlay/Submit" to="Control/Overlay/Submit" method="_on_pressed"]
[connection signal="pressed" from="Control/Overlay/Restart" to="Control/Overlay/Restart" method="_on_pressed"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
